[tool.poetry]
name = "pubmed-research"
version = "0.1.0"
description = ""
authors = ["Madhumithaashanmugam <madhumithaashanmugam@gmail.com>"]
readme = "README.md"
packages = [{ include = "pubmed_research", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"   
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
